Fix integration tests [PatienceManagement ]