@@ -12,21 +12,20 @@ public class TestDummy {
     private static final Random RANDOM = new Random();
     private static final DoctorSpecialty[] DOCTOR_SPECIALTIES = DoctorSpecialty.values();
 
-
     private TestDummy() {
     }
 
     public static List<Doctor> getAllDoctorsMock() {
         Doctor johnSmith = createDoctor("Dr. John Smith", "johnsmith@yahoo.com"
-                , "123 Main St", "0985123456", Arrays.asList(1L));
+                , "123 Main St", "0985123456", List.of(1L));
         Doctor emilyJohnson = createDoctor("Dr. Emily Johnson", "emilyjohnson@yahoo.com"
-                , "456 Elm St", "0985234567", Arrays.asList(2L));
+                , "456 Elm St", "0985234567", List.of(2L));
         Doctor michaelWilliams = createDoctor("Dr. Michael Williams", "michaelwilliams@yahoo.com"
-                , "789 Oak St", "0985345678", Arrays.asList(3L));
+                , "789 Oak St", "0985345678", List.of(3L));
         Doctor sarahBrown = createDoctor("Dr. Sarah Brown", "sarahbrown@yahoo.com"
-                , "1011 Pine St", "0985456789", Arrays.asList(4L));
+                , "1011 Pine St", "0985456789", List.of(4L));
         Doctor christopherLee = createDoctor("Dr. Christopher Lee", "christopherlee@yahoo.com"
-                , "1213 Cedar St", "0985567890", Arrays.asList(5L));
+                , "1213 Cedar St", "0985567890", List.of(5L));
         return List.of(johnSmith, emilyJohnson, michaelWilliams, sarahBrown, christopherLee);
     }
 
